[package]
name = "wirekvs"
version = "0.0.1"
edition = "2021"
description = "wirekvs"
license = "MIT"
homepage = "https://kvs.wireway.ch/"
repository = "https://github.com/epilogueTeam/wirekvs-rs"
readme = "README.md"
authors = ["Waradu", "0PandaDEV", "obvTiger"]
keywords = ["wirekvs", "kvs"]

[dependencies]
