[package]
name = "wirekvs"
version = "0.0.1"
edition = "2021"
description = "wirekvs"
license = "MIT"
homepage = "https://kvs.wireway.ch/"
repository = "https://github.com/epilogueTeam/wirekvs-rs"
readme = "README.md"
authors = ["Waradu", "0PandaDEV", "obvTiger"]
keywords = ["wirekvs", "kvs"]

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.138"
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
futures = "0.3.31"
url = "2.5.4"
urlencoding = "2.1.3"
